--- a/src/CustomerHunt/SiteBundle/Resources/views/layout.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/layout.html.twig
@@ -26,9 +26,36 @@
     {% block head_additions %}{% endblock %}
 </head>
 <body>
+    {% block header %}
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a href="{{ url('site_general_index') }}" class="navbar-brand">Customer Hunt</a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        {% block navigation %}{% endblock %}
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li{% if app.request.get('_route') == 'site_security_profile' %} class="active"{% endif %}>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ app.user.username|e }}
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ url('site_security_logout') }}">
+                                <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Выход
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    {% endblock %}
     <div class="container-fluid">
         {% block content %}{% endblock %}
     </div>
+    {% include 'CustomerHuntSiteBundle::notices.html.twig' %}
     {% block body_additions %}{% endblock %}
 </body>
 </html>
