--- a/src/CustomerHunt/SiteBundle/Resources/views/notices/projects.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/notices/projects.html.twig
@@ -4,7 +4,7 @@
 {% endif %}
 {% if notice == 'project_changed' %}
     <h4>Проект изменен</h4>
-    <p>Проект &laquo;{{ caption|e }}&raquo; был успешно изменен.</p>
+    <p>Изменения проекта &laquo;{{ caption|e }}&raquo; были успешно сохранены.</p>
 {% endif %}
 {% if notice == 'caption_already_exist' %}
     <h4>Проект уже существует</h4>
