--- a/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CustomerHuntSiteBundle::layout.html.twig' %}
 
-{% block title %}Проекты{% endblock %}
+{% block title %}{{ view.project.caption|e }}{% endblock %}
 
 {% block navigation %}
     <li>
@@ -16,7 +16,11 @@
 {% block content %}
     {% set project = view.project %}
     <div class="page">
-        <div class="page-header"><h1>Проект: {{ project.caption|e }}</h1></div>
+        <div class="page-header">
+            <h1>
+                <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp; {{ project.caption|e }}
+            </h1>
+        </div>
         <hr>
         <a href="{{ url('site_projects_index') }}" class="btn btn-default">
             <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Назад
