--- a/src/CustomerHunt/SiteBundle/Resources/views/projects/add.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/projects/add.html.twig
@@ -4,7 +4,7 @@
 
 {% block navigation %}
     <li>
-        <a href="{{ url('site_projects_index') }}">
+        <a href="{{ url('site_projects') }}">
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp; Проекты
         </a>
     </li>
@@ -24,24 +24,24 @@
                 {{ form_label(form.caption, null, {'label_attr': {'class': 'control-label'}}) }}
                 {% if form.caption.vars.required %}<span class="text-danger">*</span>{% endif %}
                 {{ form_widget(form.caption, {'attr': {'class': 'form-control', 'autofocus': true}}) }}
+                {% if errors|length > 0 %}
+                    {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
+                {% endif %}
             </div>
-            {% if errors|length > 0 %}
-                {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
-            {% endif %}
             {% set errors = form.description.vars.errors %}
             {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
             <div class="{{ class }}">
                 {{ form_label(form.description, null, {'label_attr': {'class': 'control-label'}}) }}
                 {% if form.description.vars.required %}<span class="text-danger">*</span>{% endif %}
                 {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                {% if errors|length > 0 %}
+                    {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
+                {% endif %}
             </div>
-            {% if errors|length > 0 %}
-                {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
-            {% endif %}
             <hr>
             <em>Знаком <span class="text-danger">*</span> отмечены поля, обязательные для заполнения</em>
             <hr>
-            <a href="{{ url('site_projects_index') }}" class="btn btn-default">
+            <a href="{{ url('site_projects') }}" class="btn btn-default">
                 <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Назад
             </a>
             <button type="submit" class="btn btn-success">
