--- a/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
@@ -2,9 +2,16 @@
 
 {% block title %}{{ view.project.caption|e }}{% endblock %}
 
+{% block head_additions %}
+    <style>
+        /*.main-menu .panel-body { height: 100px; }*/
+        .main-menu .icon { float: left; font-size: 48px; height: 60px; margin: 0 10px 10px 0; width: 60px; }
+    </style>
+{% endblock %}
+
 {% block navigation %}
     <li>
-        <a href="{{ url('site_projects_index') }}">
+        <a href="{{ url('site_projects') }}">
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp; Проекты
         </a>
     </li>
@@ -21,8 +28,62 @@
                 <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp; {{ project.caption|e }}
             </h1>
         </div>
+        <div class="row main-menu">
+            <div class="col-md-3">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Клиенты</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="text-success icon">
+                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                        </div>
+                        Информация о клиентах<br>
+                        <a href="#">Перейти</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Страницы</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="icon">
+                            <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+                        </div>
+                        Функциональные страницы проекта<br>
+                        <a href="#">Перейти</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Место зарезервировано</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="icon"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="panel panel-warning">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Тестовые страницы</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="text-warning icon">
+                            <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+                        </div>
+                        Страницы для тестирования<br>
+                        <a href="{{ url('site_test_pages', {'project': project.id}) }}">Перейти</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <hr>
-        <a href="{{ url('site_projects_index') }}" class="btn btn-default">
+        <a href="{{ url('site_projects') }}" class="btn btn-default">
             <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Назад
         </a>
         <a href="{{ url('site_projects_edit', {'project': project.id}) }}" class="btn btn-primary">
