Начата работа над разделом страниц

--- a/src/CustomerHunt/SiteBundle/Resources/views/security/profile.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/security/profile.html.twig
@@ -4,7 +4,7 @@
 
 {% block navigation %}
     <li>
-        <a href="{{ url('site_projects_index') }}">
+        <a href="{{ url('site_projects') }}">
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp; Проекты
         </a>
     </li>
