--- a/src/CustomerHunt/SiteBundle/Resources/views/pages/add.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/pages/add.html.twig
@@ -1,12 +1,6 @@
 {% extends 'CustomerHuntSiteBundle::layout.html.twig' %}
 
-{% block title %}Новая тестовая страница{% endblock %}
-
-{% block head_additions %}
-    <style>
-        textarea.source { height: 300px; }
-    </style>
-{% endblock %}
+{% block title %}Новая страница{% endblock %}
 
 {% block navigation %}
     {% set project = view.project %}
@@ -22,19 +16,19 @@
         </a>
     </li>
     <li>
-        <a href="{{ url('site_test_pages', {'project': project.id}) }}">
-            <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span> Тестовые страницы
+        <a href="{{ url('site_pages', {'project': project.id}) }}">
+            <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span> Страницы
         </a>
     </li>
     <li class="active">
-        <a><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Новая тестовая страница</a>
+        <a><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Новая страница</a>
     </li>
 {% endblock %}
 
 {% block content %}
     {% set project = view.project %}
     <div class="page">
-        <div class="page-header"><h1>Новая тестовая страница</h1></div>
+        <div class="page-header"><h1>Новая страница</h1></div>
         {% set form = forms.page %}
         {{ form_start(form, {'attr': {'class': 'form'}}) }}
             {% set errors = form.caption.vars.errors %}
@@ -43,16 +37,6 @@
                 {{ form_label(form.caption, null, {'label_attr': {'class': 'control-label'}}) }}
                 {% if form.caption.vars.required %}<span class="text-danger">*</span>{% endif %}
                 {{ form_widget(form.caption, {'attr': {'class': 'form-control', 'autofocus': true}}) }}
-                {% if errors|length > 0 %}
-                    {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
-                {% endif %}
-            </div>
-            {% set errors = form.alias.vars.errors %}
-            {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
-            <div class="{{ class }}">
-                {{ form_label(form.alias, null, {'label_attr': {'class': 'control-label'}}) }}
-                {% if form.alias.vars.required %}<span class="text-danger">*</span>{% endif %}
-                {{ form_widget(form.alias, {'attr': {'class': 'form-control', 'autofocus': true}}) }}
                 {% if errors|length > 0 %}
                     {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
                 {% endif %}
@@ -67,20 +51,10 @@
                     {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
                 {% endif %}
             </div>
-            {% set errors = form.source.vars.errors %}
-            {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
-            <div class="{{ class }}">
-                {{ form_label(form.source, null, {'label_attr': {'class': 'control-label'}}) }}
-                {% if form.source.vars.required %}<span class="text-danger">*</span>{% endif %}
-                {{ form_widget(form.source, {'attr': {'class': 'form-control source', 'autofocus': true}}) }}
-                {% if errors|length > 0 %}
-                    {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
-                {% endif %}
-            </div>
             <hr>
             <em>Знаком <span class="text-danger">*</span> отмечены поля, обязательные для заполнения</em>
             <hr>
-            <a href="{{ url('site_test_pages', {'project': project.id}) }}" class="btn btn-default">
+            <a href="{{ url('site_pages', {'project': project.id}) }}" class="btn btn-default">
                 <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Назад
             </a>
             <button type="submit" class="btn btn-success">
