--- a/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
@@ -28,56 +28,58 @@
                 <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp; {{ project.caption|e }}
             </h1>
         </div>
-        <div class="row main-menu">
-            <div class="col-md-3">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Клиенты</h3>
-                    </div>
-                    <div class="panel-body">
-                        <div class="text-success icon">
-                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+        <div class="container">
+            <div class="row main-menu">
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="panel panel-success">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Клиенты</h3>
                         </div>
-                        Информация о клиентах<br>
-                        <a href="#">Перейти</a>
+                        <div class="panel-body">
+                            <div class="text-success icon">
+                                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                            </div>
+                            Информация о клиентах<br>
+                            <a href="#">Перейти</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Страницы</h3>
-                    </div>
-                    <div class="panel-body">
-                        <div class="icon">
-                            <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Страницы</h3>
                         </div>
-                        Функциональные страницы проекта<br>
-                        <a href="#">Перейти</a>
+                        <div class="panel-body">
+                            <div class="icon">
+                                <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+                            </div>
+                            Функциональные страницы проекта<br>
+                            <a href="{{ url('site_pages', {'project': project.id}) }}">Перейти</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Место зарезервировано</h3>
-                    </div>
-                    <div class="panel-body">
-                        <div class="icon"></div>
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Место зарезервировано</h3>
+                        </div>
+                        <div class="panel-body">
+                            <div class="icon"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel panel-warning">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Тестовые страницы</h3>
-                    </div>
-                    <div class="panel-body">
-                        <div class="text-warning icon">
-                            <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="panel panel-warning">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Тестовые страницы</h3>
                         </div>
-                        Страницы для тестирования<br>
-                        <a href="{{ url('site_test_pages', {'project': project.id}) }}">Перейти</a>
+                        <div class="panel-body">
+                            <div class="text-warning icon">
+                                <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+                            </div>
+                            Страницы для тестирования<br>
+                            <a href="{{ url('site_test_pages', {'project': project.id}) }}">Перейти</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -89,8 +91,21 @@
         <a href="{{ url('site_projects_edit', {'project': project.id}) }}" class="btn btn-primary">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Редактировать проект
         </a>
-        <a href="{{ url('site_projects_remove', {'project': project.id}) }}" class="btn btn-danger">
+        <a href="{{ url('site_projects_remove', {'project': project.id}) }}" class="btn btn-danger remove">
             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Удалить проект
         </a>
     </div>
+{% endblock %}
+
+{% block body_additions %}
+    <script>
+        $(document).ready(function() {
+            $('a.remove').click(function(e) {
+                if (!confirm('Внимание! Все данные проекта "{{ view.project.caption|e }}" будут безвозвратно удалены. Вы уверены, что хотите продолжить?')) {
+                    e.preventDefault();
+                    return false;
+                }
+            });
+        });
+    </script>
 {% endblock %}
