--- a/src/CustomerHunt/SiteBundle/Resources/views/test_pages/index.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/test_pages/index.html.twig
@@ -47,23 +47,20 @@
             <tbody>
             {% for page in view.pages %}
                 <tr>
-                    <td>
-                        <a href="{{ url('site_test_pages_edit', {'project': project.id, 'page': page.id}) }}">
-                            <span class="glyphicon glyphicon-file" aria-hidden="true"></span> {{ page.caption|e }}
-                        </a>
-                    </td>
+                    <td><span class="glyphicon glyphicon-file" aria-hidden="true"></span> {{ page.caption|e }}</td>
                     <td>
                         <a href="{{ url('site_test_pages_page', {'project': project.id, 'alias': page.alias|e}) }}" target="_blank">
                             {{ url('site_test_pages_page', {'project': project.id, 'alias': page.alias|e}) }}
+                            <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
                         </a>
                     </td>
                     <td class="text-muted">{% if page.description is not empty %}{{ page.description|e }}{% else %}&mdash;{% endif %}</td>
                     <td class="td-actions">
                         <div class="actions">
-                            <a href="{{ url('site_test_pages_edit', {'project': project.id, 'page': page.id}) }}" title="Изменить">
+                            <a href="{{ url('site_test_pages_edit', {'project': project.id, 'page': page.id}) }}" class="edit">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
-                            <a href="{{ url('site_test_pages_remove', {'project': project.id, 'page': page.id}) }}" title="Удалить">
+                            <a href="{{ url('site_test_pages_remove', {'project': project.id, 'page': page.id}) }}" class="remove">
                                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                             </a>
                         </div>
@@ -71,7 +68,7 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="3" class="info text-center">Вы не добавили ни одной тестовой страницы</td>
+                    <td colspan="4" class="info text-center">Вы не добавили ни одной тестовой страницы</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -92,6 +89,23 @@
                 $(this).find('.actions').fadeIn(250);
             }, function() {
                 $(this).find('.actions').fadeOut(250);
+            });
+            $('.actions a.edit').popover({
+                container: 'body',
+                content: 'Изменить',
+                placement: 'bottom',
+                trigger: 'hover'
+            });
+            $('.actions a.remove').click(function(e) {
+                if (!confirm('Удалить тестовую страницу?')) {
+                    e.preventDefault();
+                    return false;
+                }
+            }).popover({
+                container: 'body',
+                content: 'Удалить',
+                placement: 'bottom',
+                trigger: 'hover'
             });
         });
     </script>
