--- a/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
@@ -2,6 +2,13 @@
 
 {% block title %}{{ view.page.caption|e }}{% endblock %}
 
+{% block head_additions %}
+    <style>
+        .td-actions { width: 60px; }
+        .actions { display: none; }
+    </style>
+{% endblock %}
+
 {% block navigation %}
     {% set project = view.project %}
     {% set page = view.page %}
@@ -38,11 +45,12 @@
             </h1>
         </div>
         <h2>Словари замен</h2>
-        <table class="table table-striped">
+        <table class="table table-striped dictionaries">
             <thead>
             <tr>
                 <th>Словарь</th>
-                <th>Селектор</th>
+                <th>GET-параметр</th>
+                <th>CSS-селектор</th>
                 <th>Вариантов замен</th>
                 <th>Описание</th>
                 <th></th>
@@ -51,13 +59,16 @@
             <tbody>
             {% for dictionary in view.replacementDictionaries %}
                 <tr>
-                    <td>{{ dictionary.caption|e }}</td>
+                    <td>
+                        <span class="glyphicon glyphicon-book" aria-hidden="true"></span> {{ dictionary.caption|e }}
+                    </td>
+                    <td>{{ dictionary.parameter|e }}</td>
                     <td>{{ dictionary.selector|e }}</td>
                     <td>{{ dictionary.replacements|length }}</td>
                     <td class="text-muted">{% if dictionary.description is not empty %}{{ dictionary.description|e }}{% else %}&mdash;{% endif %}</td>
                     <td class="td-actions">
                         <div class="actions">
-                            <a href="#" class="edit">
+                            <a href="{{ url('site_replacement_dictionaries_edit', {'project': project.id, 'page': page.id, 'dictionary': dictionary.id}) }}" class="edit">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#" class="remove">
@@ -73,7 +84,7 @@
             {% endfor %}
             </tbody>
         </table>
-        <a href="#" class="btn btn-success">
+        <a href="{{ url('site_replacement_dictionaries_add', {'project': project.id, 'page': page.id}) }}" class="btn btn-success">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Добавить словарь замен
         </a>
         <h3>Код встраивания</h3>
@@ -101,7 +112,7 @@
 {% block body_additions %}
     <script>
         $(document).ready(function() {
-            $('.pages tr').hover(function() {
+            $('.dictionaries tr').hover(function() {
                 $(this).find('.actions').fadeIn(250);
             }, function() {
                 $(this).find('.actions').fadeOut(250);
