--- a/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
@@ -89,7 +89,7 @@
         </a>
         <h3>Код встраивания</h3>
         <p>
-            В конец тэга HEAD вставьте следующий код:<br>
+            Подключите jQuery, если он еще не подключен. В конец тэга HEAD вставьте следующий код:<br>
             <code>{% filter escape %}<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>{% endfilter %}</code>
         </p>
         <p>
