--- a/src/CustomerHunt/SiteBundle/Resources/views/notices/security.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/notices/security.html.twig
@@ -2,3 +2,7 @@
     <h4>Профиль изменен</h4>
     <p>Изменения вашего личного профиля были успешно сохранены.</p>
 {% endif %}
+{% if notice == 'code_refreshed' %}
+    <h4>Код обновлен</h4>
+    <p>Код авторизации для Вашего пользователя был успешно обновлен.</p>
+{% endif %}
