--- a/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
-                    <div class="panel panel-default">
+                    <div class="panel panel-info">
                         <div class="panel-heading">
                             <h3 class="panel-title">Страницы</h3>
                         </div>
