--- a/src/CustomerHunt/SiteBundle/Resources/views/pages/add.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/pages/add.html.twig
@@ -58,7 +58,7 @@
                 <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Назад
             </a>
             <button type="submit" class="btn btn-success">
-                <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Добавить тестовую страницу
+                <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Добавить новую страницу
             </button>
         {{ form_end(form) }}
     </div>
