--- a/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
@@ -44,44 +44,95 @@
                 <span class="glyphicon glyphicon-file" aria-hidden="true"></span> {{ page.caption|e }}
             </h1>
         </div>
+        <h2>Обработка форм</h2>
+        <table class="table table-striped forms">
+            <thead>
+                <tr>
+                    <th>Форма</th>
+                    <th>CSS-селектор</th>
+                    <th>Параметров</th>
+                    <th>Описание</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for form in view.formHandlers %}
+                    <tr>
+                        <td>
+                            <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> {{ form.caption|e }}
+                        </td>
+                        <td>{{ form.selector|e }}</td>
+                        <td>{{ form.fields|length }}</td>
+                        <td class="text-muted">{% if form.description is not empty %}{{ form.description|e }}{% else %}&mdash;{% endif %}</td>
+                        <td class="td-actions">
+                            <div class="actions">
+                                <a href="{{ url('site_formhandler_form_edit', {'project': project.id, 'page': page.id, 'formHandler': form.id}) }}" class="edit">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="remove">
+                                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="5" class="info text-center">Вы не добавили ни одной обработки формы</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <a href="{{ url('site_formhandler_form_add', {'project': project.id, 'page': page.id}) }}" class="btn btn-success">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Добавить обработку формы
+        </a>
+        <h3>Код встраивания</h3>
+        <p>
+            Подключите jQuery, если он еще не подключен. В конец тэга HEAD вставьте следующий код:<br>
+            <code>{% filter escape %}<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>{% endfilter %}</code>
+        </p>
+        <p>
+            В конец тэга BODY вставьте следующий код:<br>
+            {#<code>{% filter escape %}<script src="{{ url('site_api_replacement', {'code': app.user.code|e, 'project': project.id, 'page': page.id}) }}"></script>{% endfilter %}</code>#}
+        </p>
+        <hr>
         <h2>Словари замен</h2>
         <table class="table table-striped dictionaries">
             <thead>
-            <tr>
-                <th>Словарь</th>
-                <th>GET-параметр</th>
-                <th>CSS-селектор</th>
-                <th>Вариантов замен</th>
-                <th>Описание</th>
-                <th></th>
-            </tr>
+                <tr>
+                    <th>Словарь</th>
+                    <th>GET-параметр</th>
+                    <th>CSS-селектор</th>
+                    <th>Вариантов замен</th>
+                    <th>Описание</th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-            {% for dictionary in view.replacementDictionaries %}
-                <tr>
-                    <td>
-                        <span class="glyphicon glyphicon-book" aria-hidden="true"></span> {{ dictionary.caption|e }}
-                    </td>
-                    <td>{{ dictionary.parameter|e }}</td>
-                    <td>{{ dictionary.selector|e }}</td>
-                    <td>{{ dictionary.replacements|length }}</td>
-                    <td class="text-muted">{% if dictionary.description is not empty %}{{ dictionary.description|e }}{% else %}&mdash;{% endif %}</td>
-                    <td class="td-actions">
-                        <div class="actions">
-                            <a href="{{ url('site_replacement_dictionaries_edit', {'project': project.id, 'page': page.id, 'dictionary': dictionary.id}) }}" class="edit">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </a>
-                            <a href="#" class="remove">
-                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="6" class="info text-center">Вы не добавили ни одного словаря замен</td>
-                </tr>
-            {% endfor %}
+                {% for dictionary in view.replacementDictionaries %}
+                    <tr>
+                        <td>
+                            <span class="glyphicon glyphicon-book" aria-hidden="true"></span> {{ dictionary.caption|e }}
+                        </td>
+                        <td>{{ dictionary.parameter|e }}</td>
+                        <td>{{ dictionary.selector|e }}</td>
+                        <td>{{ dictionary.replacements|length }}</td>
+                        <td class="text-muted">{% if dictionary.description is not empty %}{{ dictionary.description|e }}{% else %}&mdash;{% endif %}</td>
+                        <td class="td-actions">
+                            <div class="actions">
+                                <a href="{{ url('site_replacement_dictionaries_edit', {'project': project.id, 'page': page.id, 'dictionary': dictionary.id}) }}" class="edit">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="remove">
+                                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="6" class="info text-center">Вы не добавили ни одного словаря замен</td>
+                    </tr>
+                {% endfor %}
             </tbody>
         </table>
         <a href="{{ url('site_replacement_dictionaries_add', {'project': project.id, 'page': page.id}) }}" class="btn btn-success">
@@ -112,7 +163,7 @@
 {% block body_additions %}
     <script>
         $(document).ready(function() {
-            $('.dictionaries tr').hover(function() {
+            $('table tr').hover(function() {
                 $(this).find('.actions').fadeIn(250);
             }, function() {
                 $(this).find('.actions').fadeOut(250);
@@ -123,12 +174,13 @@
                 placement: 'bottom',
                 trigger: 'hover'
             });
-            $('.actions a.remove').click(function(e) {
+            $('.dictionaries .actions a.remove').click(function(e) {
                 if (!confirm('Удалить тестовую страницу?')) {
                     e.preventDefault();
                     return false;
                 }
-            }).popover({
+            });
+            $('.actions a.remove').popover({
                 container: 'body',
                 content: 'Удалить',
                 placement: 'bottom',
