--- a/src/CustomerHunt/SiteBundle/Resources/views/form_handlers/add.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/form_handlers/add.html.twig
@@ -97,45 +97,25 @@
                     <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Добавить еще один параметр
                 </a>
             </span>
-            <div class="checkbox">
-                <label>
-                    {{ form_widget(form.ajax) }} {{ form.ajax.vars.label }}
-                </label>
-            </div>
-            {% set errors = form.ajaxMessageSuccess.vars.errors %}
+            {% set errors = form.successRedirect.vars.errors %}
             {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
             <div class="{{ class }}">
-                {{ form_label(form.ajaxMessageSuccess, null, {'label_attr': {'class': 'control-label'}}) }}
-                {% if form.ajaxMessageSuccess.vars.required %}<span class="text-danger">*</span>{% endif %}
-                {{ form_widget(form.ajaxMessageSuccess, {'attr': {'class': 'form-control'}}) }}
+                {{ form_label(form.successRedirect, null, {'label_attr': {'class': 'control-label'}}) }}
+                {% if form.successRedirect.vars.required %}<span class="text-danger">*</span>{% endif %}
+                {{ form_widget(form.successRedirect, {'attr': {'class': 'form-control'}}) }}
                 {% if errors|length > 0 %}
                     {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
                 {% endif %}
             </div>
-            {% set errors = form.ajaxMessageError.vars.errors %}
+            {% set errors = form.errorRedirect.vars.errors %}
             {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
             <div class="{{ class }}">
-                {{ form_label(form.ajaxMessageError, null, {'label_attr': {'class': 'control-label'}}) }}
-                {% if form.ajaxMessageError.vars.required %}<span class="text-danger">*</span>{% endif %}
-                {{ form_widget(form.ajaxMessageError, {'attr': {'class': 'form-control'}}) }}
+                {{ form_label(form.errorRedirect, null, {'label_attr': {'class': 'control-label'}}) }}
+                {% if form.errorRedirect.vars.required %}<span class="text-danger">*</span>{% endif %}
+                {{ form_widget(form.errorRedirect, {'attr': {'class': 'form-control'}}) }}
                 {% if errors|length > 0 %}
                     {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
                 {% endif %}
-            </div>
-            {% set errors = form.redirect.vars.errors %}
-            {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
-            <div class="{{ class }}">
-                {{ form_label(form.redirect, null, {'label_attr': {'class': 'control-label'}}) }}
-                {% if form.redirect.vars.required %}<span class="text-danger">*</span>{% endif %}
-                {{ form_widget(form.redirect, {'attr': {'class': 'form-control'}}) }}
-                {% if errors|length > 0 %}
-                    {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
-                {% endif %}
-            </div>
-            <div class="checkbox">
-                <label>
-                    {{ form_widget(form.email) }} {{ form.email.vars.label }}
-                </label>
             </div>
             {% set errors = form.emailRecipients.vars.errors %}
             {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
@@ -156,7 +136,10 @@
                 {% if errors|length > 0 %}
                     {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
                 {% endif %}
-                <span class="help-block">Чтобы вставить значение параметра формы, напишите <code>%&lt;атрибут NAME параметра&gt;%</code></span>
+                <span class="help-block">
+                    Чтобы вставить значение параметра формы, напишите <code>%&lt;атрибут NAME параметра&gt;%</code>.<br>
+                    <code>%hunter_query%</code> &mdash; GET-параметры.
+                </span>
             </div>
             <hr>
             <em>Знаком <span class="text-danger">*</span> отмечены поля, обязательные для заполнения</em>
@@ -183,17 +166,6 @@
                 ).appendTo(fields);
                 fields_count++;
             });
-            $('#{{ form.ajax.vars.id }}').change(function() {
-                var checked = $(this).is(':checked');
-                $('#{{ form.ajaxMessageSuccess.vars.id }}').prop('disabled', !checked);
-                $('#{{ form.ajaxMessageError.vars.id }}').prop('disabled', !checked);
-                $('#{{ form.redirect.vars.id }}').prop('disabled', checked);
-            }).change();
-            $('#{{ form.email.vars.id }}').change(function() {
-                var checked = $(this).is(':checked');
-                $('#{{ form.emailRecipients.vars.id }}').prop('disabled', !checked);
-                $('#{{ form.emailTemplate.vars.id }}').prop('disabled', !checked);
-            }).change();
         });
     </script>
 {% endblock %}
