--- a/src/CustomerHunt/SiteBundle/Resources/views/api/form_handler.js.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/api/form_handler.js.twig
@@ -1,4 +1,4 @@
-<script>
+{#<script>#}
 var hunter_formhandler_action = '{{ action|e }}';
 var hunter_formhandler_handlers = {{ handlers|raw }};
 
@@ -28,4 +28,4 @@ function hunter_formhandler_init() {
 }
 
 hunter_formhandler_init();
-</script>
+{#</script>#}
