--- a/src/CustomerHunt/SiteBundle/Resources/views/form_handlers/edit.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/form_handlers/edit.html.twig
@@ -153,7 +153,7 @@
                 <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Назад
             </a>
             <button type="submit" class="btn btn-success">
-                <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Добавить новую обработку формы
+                <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Сохранить изменения
             </button>
         {{ form_end(form) }}
     </div>
