--- a/src/CustomerHunt/SiteBundle/Resources/views/api/form_handler.js.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/api/form_handler.js.twig
@@ -28,5 +28,5 @@ function hunter_formhandler_init() {
     }
 }
 
-hunter_formhandler_init();
+$(document).ready(function() { hunter_formhandler_init(); });
 {#</script>#}
