--- a/src/CustomerHunt/SiteBundle/Resources/views/api/replacement.js.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/api/replacement.js.twig
@@ -42,5 +42,5 @@ function hunter_replacement_init() {
     }
 }
 
-hunter_replacement_init();
+$(document).ready(function() { hunter_replacement_init(); });
 {#</script>#}
