--- a/src/CustomerHunt/SiteBundle/Resources/views/form_handlers/add.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/form_handlers/add.html.twig
@@ -74,7 +74,9 @@
                 form_label(prototype.caption) ~ form_widget(prototype.caption, {'attr': {'class': 'form-control'}}) ~
                 '</div><div class="col-xs-6 col-sm-6 col-md-6 form-inline">' ~
                 form_label(prototype.name) ~ form_widget(prototype.name, {'attr': {'class': 'form-control'}}) ~
-                '</div></div>' %}
+                '</div><div class="checkbox"><label>' ~
+                form_widget(prototype.email) ~ ' ' ~ prototype.email.vars.label ~
+                '</label></div></div>' %}
             <div id="fields" data-prototype="{{ prototype_source|e }}">
                 {{ form_label(form.fields) }}
                 {% for field in form.fields %}
@@ -88,6 +90,11 @@
                                 {{ form_label(field.name) }}
                                 {{ form_widget(field.name, {'attr': {'class': 'form-control'}}) }}
                             </div>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                {{ form_widget(field.email) }} {{ field.email.vars.label }}
+                            </label>
                         </div>
                     </div>
                 {% endfor %}
@@ -141,6 +148,22 @@
                     <code>%hunter_query%</code> &mdash; GET-параметры.
                 </span>
             </div>
+            <div class="checkbox">
+                <label>
+                    {{ form_widget(form.customerEmail) }} {{ form.customerEmail.vars.label }}
+                </label>
+            </div>
+            {% set errors = form.customerEmailTemplate.vars.errors %}
+            {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
+            <div class="{{ class }}">
+                {{ form_label(form.customerEmailTemplate, null, {'label_attr': {'class': 'control-label'}}) }}
+                {% if form.customerEmailTemplate.vars.required %}<span class="text-danger">*</span>{% endif %}
+                {{ form_widget(form.customerEmailTemplate, {'attr': {'class': 'form-control'}}) }}
+                {% if errors|length > 0 %}
+                    {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
+                {% endif %}
+                <span class="help-block">Чтобы вставить значение параметра формы, напишите <code>%&lt;атрибут NAME параметра&gt;%</code>.</span>
+            </div>
             <hr>
             <em>Знаком <span class="text-danger">*</span> отмечены поля, обязательные для заполнения</em>
             <hr>
@@ -166,6 +189,12 @@
                 ).appendTo(fields);
                 fields_count++;
             });
+            $('#{{ form.customerEmail.vars.id }}').change(function() {
+                if ($(this).is(':checked'))
+                    $('#{{ form.customerEmailTemplate.vars.id }}').parents('.form-group').stop(true, true).slideDown(250);
+                else
+                    $('#{{ form.customerEmailTemplate.vars.id }}').parents('.form-group').stop(true, true).slideUp(250);
+            }).change();
         });
     </script>
 {% endblock %}
